Replace Font size btn with Stereo btn
This is the first of four commits to enable mono downmixing.

1. This. Add a button as basic framework.
2. Migration from legacy media player to media3 exoplayer, which supports advanced audio features
3. Make stereo button actually working
4. Add back ability to change font size in options menu

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -169,6 +169,9 @@
     <string name="settings_shuffle_explainer_random">Shuffle on</string>
     <string name="settings_shuffle_explainer_radio">Shuffle + Start songs at random time</string>
 
+    <string name="settings_stereo_on">Stereo</string>
+    <string name="settings_stereo_off">Mono</string>
+
     <string name="settings_scrobble_title">Scrobble</string>
     <string name="settings_scrobble">Send details of played tracks to Last.FM or Libre.FM (requires that Scrobble Droid or Simple Last.fm Scrobbler installed on the device)</string>
 
