--- a/app/src/main/res/values-sr/strings.xml
+++ b/app/src/main/res/values-sr/strings.xml
@@ -105,7 +105,7 @@
 
     <string name="settings_thanks">Посебне захвале</string>
     <string name="settings_thanks_icons">Иконе</string>
-    <string name="settings_thanks_icons_summary">Daniele De Santis &amp; WPZOOM (иконе са iconfinder.com)</string>
+    <string name="settings_thanks_icons_summary">Daniele De Santis, WPZOOM (иконе са iconfinder.com), Google Material Symbols</string>
     <string name="settings_thanks_doc">Упутства</string>
     <string name="settings_thanks_doc_summary">Sue Smith (упутства за прављење музичког плејера за Андроид)</string>
     <string name="settings_thanks_i15n">Превод</string>
