--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -118,7 +118,7 @@
 
     <string name="settings_thanks">Agradecimentos espciais</string>
     <string name="settings_thanks_icons">Ícones</string>
-    <string name="settings_thanks_icons_summary">Daniele De Santis &amp; WPZOOM (ícones achados em iconfinder.com)</string>
+    <string name="settings_thanks_icons_summary">Daniele De Santis, WPZOOM (ícones achados em iconfinder.com), Google Material Symbols</string>
     <string name="settings_thanks_doc">Tutorial</string>
     <string name="settings_thanks_doc_summary">Sue Smith (tutorial sobre como criar um tocador de música para Android)</string>
     <string name="settings_thanks_i15n">Tradução</string>
