--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -109,7 +109,7 @@
 
     <string name="settings_thanks">Teşekkürler</string>
     <string name="settings_thanks_icons">İkonlar</string>
-    <string name="settings_thanks_icons_summary">Daniele De Santis &amp; WPZOOM (iconfinder.com\'dan)</string>
+    <string name="settings_thanks_icons_summary">Daniele De Santis, WPZOOM (iconfinder.com\'dan), Google Material Symbols</string>
     <string name="settings_thanks_doc">Başvuru</string>
     <string name="settings_thanks_doc_summary">Sue Smith (Android için müzikçalar hazırlama üzerine dersler)</string>
     <string name="settings_thanks_i15n">Çeviri</string>
