--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -233,15 +233,13 @@
 
     <string name="settings_version_title">Version number</string>
     <string name="settings_author_title">Author</string>
-    <string name="settings_author">Mathieu Souchaud</string>
+    <string name="settings_author" translatable="false">Mathieu Souchaud, Mira Alpmann</string>
     <string name="settings_source_title">Sources</string>
-    <string name="settings_source" translatable="false">https://gitlab.com/souch/SMP</string>
+    <string name="settings_source" translatable="false">https://github.com/mira-x/SicMu</string>
     <string name="settings_licence_title">License</string>
     <string name="settings_licence" translatable="false">GPLv3-only</string>
     <string name="donate_title">Donate</string>
     <string name="donate_summary">If you like the app, donate to reward me for the hard work !</string>
-    <string name="buy_pro_summary">If you like the app, donate or buy the pro version to reward me for the hard work !</string>
-    <string name="show_donate_disabled">Show donate popup disabled</string>
     <string name="close">Close</string>
 
     <string name="changelogs_title">Changelogs</string>
